---
source: dfir_rs/tests/surface_stratum.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) source_iter([1, 3])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map(|x| 2 * x)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) for_each(|x| output_inner.borrow_mut().push(x))", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n9v1 [label="(n9v1) identity()", shape=invhouse, fillcolor="#88aaff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n1v1 [label="0"]
    n5v1 -> n1v1 [label="1"]
    n4v1 -> n7v1
    n2v1 -> n8v1 [label="0"]
    n2v1 -> n6v1 [label="1"]
    n7v1 -> n5v1
    n8v1 -> n9v1
    n9v1 -> n10v1
    n10v1 -> n4v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n4v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n3v1
        n5v1
        n1v1
        n2v1
        n6v1
        subgraph "cluster_sg_2v1_var_a" {
            label="var a"
            n1v1
            n2v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n9v1
    }
}
